# FatesList

./: '  .config.py.swp  .deepsource.toml  .env  .flake8  .gitignore  .gitmodules  .main.py.swp  .pylintrc  404.html  :w  :wq  ;q  =3.7.4  LICENSE  Oauth.py  README.md  Search.html  \  a.py  add.html  build_py310.txt  config.py  config_secrets_template.py  config_template.py  dbmig.py  default.conf  discord_main.py  discord_manager.py  discordbotlist.bsdesign  fluvicorn.py  index.html  last_deny.html  main.py  manage.py  manager_bot.py  migdb.py  package-lock.json  profile.html  profile_personal.html  (+15 more)
admin/: .gitignore  app.py  cfargo.yml  manage.py  piccolo_app.py  piccolo_conf.py  runprod  runserver  tables.py
admin_v2/: app.py  piccolo_conf.py  tables.py
config/: __init__.py  _logger.py  ban_data.json  config.py  config_secrets_template.py  manager.py  prometheus.yml  staff_roles.json
docs/: mkdocs.yml  requirements.txt
fates_client/: clean.sh  deploy.sh  lib.py  setup.cfg  setup.py  tst.py
fates_client.OLD/: setup.cfg  tst.py
idoc/: chat_protocol
lynx/: README.md
maint/: clouderror.html  clouderror.json
modules/: .deps.py.swp  Oauth.py  api_models.py  badges.py  core.py  deps.py  emd.py  emd_bstrap.py  emd_hab.py  imports.py  utils.py
nginx/: nginx.conf
patches/: connection.py  core.py  file_paths.txt  mixins.py  protocol.py
ping/: app.py  run  status.json
requirements-windows/: requirements.git.txt  (+1 more)
util/utilbot/: dbinit.py  deps.py  main.py  models.py  prod.db  pyproject.toml
util/utilbot/cogs/: events.py  manager.py  misc.py
(+523 files in other folders)
